style.css
/* ... */
.win-window.max {
  width: 100% !important;
  height: calc(100% - 54px) !important;
  left: 0px !important;
  top: 0px !important;
  /* z-index: 1000 !important; */
  border-radius: 0;
  border: none;
  box-shadow: none;
}

.win-window.max > .win-titlebar > .buttons > .win-btn.win-minimize {
  visibility: collapse;
}

.desktop ~ .win-window.max {
  height: calc(100% - 42px - 12px) !important;
}

.win-window.max > .win-titlebar,
.win-window.max > .win-content {
  border-radius: 0;
}

.win-window.max > .resize-grips {
  display: none;
}

.win-window.min {
  min-height: 0;
  height: auto !important;
  border-radius: 5px;
}

.win-window.min > .win-titlebar {
  border-radius: 5px;
}

.win-window.min .win-content {
  display: none;
}

.win-window.min .resize-grips {
  display: none;
}

.win-titlebar,
.win-window-decorative .win-titlebar {
  user-select: none;
  display: flex;
  background-color: var(--root);
  border-radius: 5px 5px 0 0;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
}

.win-window:not(.focus) > .win-titlebar .title,
.win-window-decorative:not(.focus) > .win-titlebar .title {
  opacity: 0.5;
}

.win-window:not(.focus) > .win-titlebar button,
.win-window-decorative:not(.focus) > .win-titlebar button {
  filter: brightness(0.5);
}

.win-window.focus > .win-titlebar,
.win-window-decorative.focus > .win-titlebar {
  background-color: var(--header);
}

.win-window.snapped {
  box-shadow: none;
  border-radius: 0;
}

.win-titlebar .buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.win-titlebar .outer-title {
  flex: 1;
  font-size: 14px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  height: 100%;
  min-width: 0;
  overflow: hidden;
}

.win-titlebar .title {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  width: 100%;
  text-align: center;
  height: 100%;
  line-height: 32px;
}

.win-titlebar button {
  width: 42px;
  height: 24px;
  border: none;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  appearance: none;
  font-size: 0;
  padding: 0;
  mask-size: auto;
  mask-position: center;
  mask-repeat: no-repeat;
  -webkit-mask-size: auto;
  -webkit-mask-position: center;
  -webkit-mask-repeat: no-repeat;
  background-color: var(--text);
}

.win-titlebar button:hover,
.win-titlebar button:active {
  background-color: var(--text-alt) !important;
}

.win-titlebar button:target,
.win-titlebar button:focus {
  background-color: var(--text);
}

.win-titlebar button:focus {
  outline: none;
  border: none;
}

.win-titlebar button.win-minimize {
  mask-image: url("data:image/svg+xml,%3Csvg width='12' height='1' viewBox='0 0 12 1' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='12' y1='0.5' x2='7.15256e-07' y2='0.5' stroke='white'/%3E%3C/svg%3E%0A");
  -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='12' height='1' viewBox='0 0 12 1' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='12' y1='0.5' x2='7.15256e-07' y2='0.5' stroke='white'/%3E%3C/svg%3E%0A");
}

.win-titlebar button.win-close {
  mask-image: url("data:image/svg+xml,%3Csvg width='11' height='11' viewBox='0 0 11 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.778198' y='10.0707' width='13.1416' height='1.31416' transform='rotate(-45 0.778198 10.0707)' fill='white'/%3E%3Crect x='1.70746' y='0.778198' width='13.1416' height='1.31416' transform='rotate(45 1.70746 0.778198)' fill='white'/%3E%3C/svg%3E");
  -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='11' height='11' viewBox='0 0 11 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.778198' y='10.0707' width='13.1416' height='1.31416' transform='rotate(-45 0.778198 10.0707)' fill='white'/%3E%3Crect x='1.70746' y='0.778198' width='13.1416' height='1.31416' transform='rotate(45 1.70746 0.778198)' fill='white'/%3E%3C/svg%3E");
}

.win-window.min .win-titlebar button.win-minimize {
  mask-image: url("data:image/svg+xml,%3Csvg width='12' height='11' viewBox='0 0 12 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='12' y1='5.5' x2='7.15256e-07' y2='5.5' stroke='white'/%3E%3Cline x1='5.5' y1='11' x2='5.5' y2='-3.27825e-07' stroke='white'/%3E%3C/svg%3E%0A");
  -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='12' height='11' viewBox='0 0 12 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='12' y1='5.5' x2='7.15256e-07' y2='5.5' stroke='white'/%3E%3Cline x1='5.5' y1='11' x2='5.5' y2='-3.27825e-07' stroke='white'/%3E%3C/svg%3E%0A");
}

.win-content.with-sidebar {
  padding: 0;
}

[data-sidebar-type="horizontal"] .with-sidebar {
  flex-direction: column;
}

.win-content {
  padding: 10px;
  flex: 1;
  background: var(--root);
  overflow: auto;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  position: relative;
}

.container {
  padding: 10px;
}

.tooltip {
  position: fixed;
  display: flex;
  flex-direction: column;
  background-color: var(--unfocused);
  border: 1px solid var(--outline);
  color: var(--text-light);
  border-radius: 6px;
  user-select: none;
  z-index: 9999999;
  pointer-events: none;
}

.tooltip .text {
  align-self: flex-start;
  padding: 4px 8px;
}

.win-content h1 {
  margin: 0.35rem 0;
  font-size: 1.35rem;
  font-weight: 600;
}

.win-window .resize-grips {
  position: absolute;
  width: 100%;
  height: 100%;
  pointer-events: none;
  top: 0;
  left: 0;
}

@media (pointer: coarse) {
  .win-window .resize-grips {
    position: absolute;
    width: calc(100% + 3rem);
    height: calc(100% + 3rem);
    pointer-events: none;
    top: -1.5rem;
    left: -1.5rem;
  }

  .win-window .resize-grips div {
    width: 1.5rem !important;
    height: 1.5rem !important;
  }
}

.win-window .resize-grips div {
  position: absolute;
  width: 6px;
  height: 6px;
  opacity: 0.9;
  /*   z-index: 1; */
  pointer-events: auto;
  /*   background-color: #f003; */
}
/* ... */

